[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/game/trade/bank_popup.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/bank.png" type="Texture" id=2]
[ext_resource path="res://ui/game/trade/trade_item.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/cross.png" type="Texture" id=5]
[ext_resource path="res://assets/images/tick.png" type="Texture" id=6]
[ext_resource path="res://assets/images/tick_disable.png" type="Texture" id=7]

[node name="BankPopup" type="PopupDialog"]
visible = true
margin_right = 700.0
margin_bottom = 500.0
rect_min_size = Vector2( 700, 370 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="BankBg" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="ItemCon" type="HBoxContainer" parent="."]
anchor_left = 0.154286
anchor_top = 0.2
anchor_right = 0.891429
anchor_bottom = 0.8
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Lumber" parent="ItemCon" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 100.0
margin_bottom = 300.0
res_type = 0

[node name="Ore" parent="ItemCon" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 0.0
margin_right = 204.0
margin_bottom = 300.0

[node name="Grain" parent="ItemCon" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 0.0
margin_right = 308.0
margin_bottom = 300.0
res_type = 4

[node name="Brick" parent="ItemCon" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 0.0
margin_right = 412.0
margin_bottom = 300.0
res_type = 1

[node name="Wool" parent="ItemCon" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_top = 0.0
margin_right = 516.0
margin_bottom = 300.0
res_type = 3

[node name="TitleCon" type="HBoxContainer" parent="."]
anchor_left = 0.154286
anchor_top = 0.048
anchor_right = 0.891429
anchor_bottom = 0.18
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Lumber" type="Label" parent="TitleCon"]
margin_right = 100.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 66 )
theme = ExtResource( 4 )
theme_type_variation = "BigLabel"
text = "4:1"
align = 1
valign = 1

[node name="Ore" type="Label" parent="TitleCon"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 66 )
theme = ExtResource( 4 )
theme_type_variation = "BigLabel"
text = "4:1"
align = 1
valign = 1

[node name="Grain" type="Label" parent="TitleCon"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 66 )
theme = ExtResource( 4 )
theme_type_variation = "BigLabel"
text = "4:1"
align = 1
valign = 1

[node name="Brick" type="Label" parent="TitleCon"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 66 )
theme = ExtResource( 4 )
theme_type_variation = "BigLabel"
text = "4:1"
align = 1
valign = 1

[node name="Wool" type="Label" parent="TitleCon"]
margin_left = 416.0
margin_right = 516.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 66 )
theme = ExtResource( 4 )
theme_type_variation = "BigLabel"
text = "4:1"
align = 1
valign = 1

[node name="Get" type="Label" parent="."]
margin_left = 8.0
margin_top = 343.0
margin_right = 108.0
margin_bottom = 409.0
theme = ExtResource( 4 )
theme_type_variation = "BigLabel"
text = "得到"

[node name="Pay" type="Label" parent="."]
margin_left = 8.0
margin_top = 90.0
margin_right = 108.0
margin_bottom = 156.0
theme = ExtResource( 4 )
theme_type_variation = "BigLabel"
text = "付出"

[node name="Cancel" type="TextureButton" parent="."]
margin_left = 212.0
margin_top = 409.0
margin_right = 292.0
margin_bottom = 489.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Confirm" type="TextureButton" parent="."]
margin_left = 420.0
margin_top = 409.0
margin_right = 500.0
margin_bottom = 489.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
expand = true
stretch_mode = 5

[connection signal="button_down" from="Cancel" to="." method="_on_cancel"]
[connection signal="button_down" from="Confirm" to="." method="_on_confirm"]
